# AtA

./: .gitignore  README.md
distributed/: ATA.c  ATA.h  CMakeLists.txt  README.md  a.out  common.h  common.h.in  compile_cmdline  init.sh  jobAtA.err  jobAtA.out  jobAtA.sh  jobSca.sh  main  matrices.c  matrices.h  mpiruntests.sh  provaScalapack.c  provasubarray.c  pseudocode.c  queue.c  queue.h  rectScalapack.c  simulexec.c  simulexec.h  test.csv  test_ata.c  textree.c
distributed/cmake/: FindTBB.cmake
sequential/: CMakeLists.txt  README.md  ata.c  ata.h  common.h  common.h.in  strassen.c  strassen.c.old  strassen.h  test_ata.c  test_strassen.c
shared/: CMakeLists.txt  README.md  ata.c  ata.h  common.h  common.h.in  matrices.c  matrices.h  queue.c  simulexec.c  simulexec.h  simulexec.new.c  simulexec.old.c  strassen.c  strassen.h  test_ata.c  test_syrk.c
shared/cmake/: FindMKL.cmake
